--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
   schedule:
-   # - cron: '0 0,6,12,18 * * *' # Every 6 hours
-   - cron: '*/10 * * * *' # Every 10 min
+     - cron: '0 * * * *' # Every hour
+   # - cron: '*/10 * * * *' # Every 10 min
 
 jobs:
   build:
